--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,12 +16,13 @@ spring:
 topic:
   telegram:
     receive: "telegramAPI_primaryDataCollector"
-  advert:
+  final-preparator:
     send: "primaryDataCollector_finalDataPreparator"
+    receive: "finalDataPreparator_primaryDataCollector"
 server:
   port: 8090
 scheduler:
   resend:
-    delay: "1800000"
-    wait: 600000
+    delay: "120000"
+    wait: 50000
     attempts.count: 3
